Endpoint get profile
