# handler/endpoints.go
@@ -131,3 +131,8 @@ func (s *Server) Login(ctx echo.Context) (err error) {
 		Token: stringToken,
 	})
 }
+
+func (s *Server) Profile(ctx echo.Context) error {
+	//TODO implement me
+	panic("implement me")
+}
